@@ -19,6 +19,7 @@
     Security Fixes:
     ----------------------------
     + SQL injections processing `tableName` (#2738);
+    + SQL injections processing `ftype` (#2751);
 
 == 1.4
 
